<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/calculation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:importantForAutofill="no"
        android:inputType="none"
        android:text="@string/cal"
        android:textAlignment="textEnd"
        android:textSize="23sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:importantForAutofill="no"
        android:inputType="none"
        android:text="0"
        android:textAlignment="textEnd"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculation" />

    <Button
        android:id="@+id/btnPercent"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="#F7F7F7"
        android:text="@string/percent"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result" />

    <Button
        android:id="@+id/btnCE"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="#F7F7F7"
        android:text="@string/ce"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/btnPercent"
        app:layout_constraintTop_toTopOf="@id/btnPercent" />

    <Button
        android:id="@+id/btnC"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="#F7F7F7"
        android:text="@string/c"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/btnCE"
        app:layout_constraintTop_toTopOf="@id/btnCE" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="#F7F7F7"
        android:text="@string/del"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@id/btnC"
        app:layout_constraintTop_toTopOf="@id/btnC" />

    <Button
        android:id="@+id/btnFraction"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:backgroundTint="#F7F7F7"
        android:text="@string/fraction"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/btnPercent"
        app:layout_constraintTop_toBottomOf="@id/btnPercent" />

    <Button
        android:id="@+id/btnSquare"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="#F7F7F7"
        android:text="@string/square"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/btnFraction"
        app:layout_constraintTop_toTopOf="@id/btnFraction" />

    <Button
        android:id="@+id/btnRadical"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="#F7F7F7"
        android:text="@string/radical"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@id/btnSquare"
        app:layout_constraintTop_toTopOf="@id/btnSquare" />

    <Button
        android:id="@+id/btnDiv"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="#F7F7F7"
        android:text="@string/div"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/btnRadical"
        app:layout_constraintTop_toTopOf="@id/btnRadical" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:backgroundTint="#FCFCFC"
        android:text="@string/seven"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@id/btnFraction"
        app:layout_constraintTop_toBottomOf="@id/btnFraction" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="#FCFCFC"
        android:text="@string/eight"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/btn7"
        app:layout_constraintTop_toTopOf="@id/btn7" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="#FCFCFC"
        android:text="@string/nine"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/btn8"
        app:layout_constraintTop_toTopOf="@id/btn8" />

    <Button
        android:id="@+id/btnMulti"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="#F7F7F7"
        android:text="@string/multi"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/btn9"
        app:layout_constraintTop_toTopOf="@id/btn9" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:backgroundTint="#FCFCFC"
        android:text="@string/four"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@id/btn7"
        app:layout_constraintTop_toBottomOf="@id/btn7" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="#FCFCFC"
        android:text="@string/five"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/btn4"
        app:layout_constraintTop_toTopOf="@id/btn4" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="#FCFCFC"
        android:text="@string/six"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/btn5"
        app:layout_constraintTop_toTopOf="@id/btn5" />

    <Button
        android:id="@+id/btnSub"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="#F7F7F7"
        android:text="@string/sub"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/btn6"
        app:layout_constraintTop_toTopOf="@id/btn6" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:backgroundTint="#FCFCFC"
        android:text="@string/one"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@id/btn4"
        app:layout_constraintTop_toBottomOf="@id/btn4" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="#FCFCFC"
        android:text="@string/two"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/btn1"
        app:layout_constraintTop_toTopOf="@id/btn1" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="#FCFCFC"
        android:text="@string/three"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/btn2"
        app:layout_constraintTop_toTopOf="@id/btn2" />

    <Button
        android:id="@+id/btnSum"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="#F7F7F7"
        android:text="@string/sum"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/btn3"
        app:layout_constraintTop_toTopOf="@id/btn3" />

    <Button
        android:id="@+id/btnSign"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:backgroundTint="#FCFCFC"
        android:text="@string/sign"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@id/btn1"
        app:layout_constraintTop_toBottomOf="@id/btn1" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="#FCFCFC"
        android:text="@string/zero"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/btnSign"
        app:layout_constraintTop_toTopOf="@id/btnSign" />

    <Button
        android:id="@+id/btnDot"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="#FCFCFC"
        android:text="@string/dot"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/btn0"
        app:layout_constraintTop_toTopOf="@id/btn0" />

    <Button
        android:id="@+id/btnEqual"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="#7bb4e0"
        android:text="@string/equal"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/btnDot"
        app:layout_constraintTop_toTopOf="@id/btnDot" />
</androidx.constraintlayout.widget.ConstraintLayout>